# jaxel_task

./: .dockerignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: e0ff150fc718_init.py
src/trial/: poll_main.py  save_main.py  settings.py  wiring.py
src/trial/api/: http_api.py
src/trial/application/: __init__.py  foundation.py
src/trial/application/adapter/: bus_adapter.py  quote_provider_adapter.py
src/trial/application/domain/: model.py
src/trial/application/repository/: bus_repo.py  quote_provider_repo.py  quote_repo.py
src/trial/application/use_case/: last_rate_uc.py  poll_uc.py  save_uc.py
src/trial/infrastructure/: __init__.py
src/trial/infrastructure/adapter/: garantex_adapter.py  kafka_adapter.py
src/trial/infrastructure/repository/: alch_model.py  alch_quote_repo.py  garantex_quote_provider_repo.py  kafka_consumer_repo.py  kafka_producer_repo.py  tort_model.py  tort_quote_repo.py
tests/: conftest.py  test_garantex_repo.py
