[metadata]
name = trial
version = 0.0.1
author = Andrey Kashirin

[options]
include-package-data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
trial = py.typed

[tool:pytest]
markers =
	integration: mark a test as an integration test

[importmagic]
multiline = 'backslash'
max_columns = 100
indent_with_tabs = 1

[flake8]
max_line_length = 90
